# torch-tk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  upload2anaconda.sh  upload2pypi.sh
.github/workflows/: ci.yml
notebooks/: HowTo.ipynb
scripts/: setup-dev-env.sh  upload2anaconda.sh  upload2pypi.sh
src/torch_tk/: __init__.py  test.py
src/torch_tk/checkpoints/: __init__.py  checkpoint_manager.py  utils.py
src/torch_tk/diagnostics/: __init__.py  diagnostics.py  loss.py  plotting.py
src/torch_tk/models/: __init__.py  model.py  utils.py
src/torch_tk/optimizers/: __init__.py  adam.py  sgd.py  sgd_manual.py
src/torch_tk/training/: __init__.py  trainer.py
tests/: test_test.py
