[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-tk"
version = "1.2.2"
description = "Streamlines training, checkpoint management, and diagnostics of PyTorch models."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Jan Kazil", email = "jan.kazil.dev@gmail.com" }
]
dependencies = [
  "torch",
  "numpy",
  "xarray",
  "matplotlib",
  "scipy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pytorch", "training", "checkpointing", "diagnostics", "deep-learning"]

[project.urls]
Homepage = "https://github.com/jankazil/torch-tk"
Repository = "https://github.com/jankazil/torch-tk"
Issues = "https://github.com/jankazil/torch-tk/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.1",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 128
target-version = "py312"
extend-exclude = [
    "__init__.py",
    "dist",
    "build",
    "data",
    "demos",
    "docs",
    "experiments",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
